# dlliteplugin

./: ChangeLog  Makefile.am  README  bootstrap-extra.sh  bootstrap-windows.sh  build_owlcpp.bat  build_owlcpp.sh  checkout_build_owlcpp.sh  configure.ac
benchmarks/LUBM/: aggregateresults.sh  benchmark_single.sh  generate.sh  generateset.sh  ontology_footer.owl~  ontology_header.owl  ontology_header.owl~  program.dlp
benchmarks/LUBMDiamond/: benchmark_all.sh  generate.sh
benchmarks/LUBMdefault/: benchmark_single.sh  generate.sh  generateset.sh  program.hex  program_with_additional_constraints.hex
benchmarks/birdpenguin/: benchmark_all.sh  benchmark_single.sh
benchmarks/consistent/LUBM/: ontology_header.owl
benchmarks/consistent/LUBMDiamond/: generate_ontology.sh
benchmarks/consistent/taxi/: generateset_big.sh  ontology_small.owl
benchmarks/dllite/: README  generate.sh  generate.sh~  generateset.sh  generateset.sh~  program.hex
benchmarks/inconsistent/LUBM/: ontology.owl  ontology.owl~  t.owl~  test.owl~
benchmarks/inconsistent/family/: aggregation.sh  aggregationWithAnswerSets.sh  benchmark_single.sh  generate.sh  generate_ontology.sh  generate_ontology.sh~  generate_small.sh  generateset.sh  generateset_small.sh  ontology.owl  ontology_header.owl  ontology_header.owl~  ontology_small.owl  program.dlp  program.hex  run.sh  temp.txt
benchmarks/inconsistent/lubm/: University10_0.owl  University10_0.owl~  generateset.sh  lubm_generated.owl  lubm_tbox_lite.owl  lubm_trial.owl  ontology.owl  program.hex
benchmarks/inconsistent/network/: generate.sh  generateset.sh  network.hex  network.owl  networksimple.hex  ontology.owl  (+7 more)
benchmarks/scripts/: testset.sh
benchmarks/taxi/: benchmark_single.sh  generate.sh  generate_big.sh  generateset.sh  ontology.owl  ontology_big.owl  ontology_footer.owl  ontology_header.owl  program.hex
benchmarks/template/: README  benchmark_single.sh  doaggregation.sh  generate.sh  ontology_header.owl
doc/: aggregates.hex
examples/: bird.hex  bird.owl  bird2.hex  bird2.owl  complement.hex  complement.owl  dlsyntax1.hex  lubm.hex  lubm.owl  lubm_default.hex  lubm_default.owl  simple.hex  taxi.hex  taxi.owl  taxi_cust_assign.hex  taxi_cust_assign.owl  taxicompl.hex  test.hex  test.owl
examples/annotated/: Untitled Document 1~  out  test1.hex  test1.owl
examples/inconsistent/: family.hex  family.owl  inst_size_005_inst_011.hex
examples/safety_issue/: howtorun  inst_size_035_inst_097.hex  inst_size_035_inst_097.owl
include/: DLLitePlugin.h  DLRewriter.h  ExternalAtoms.h  Makefile.am  RepairModelGenerator.h
owlcpp/: Makefile.am
requiem/src/: MyRequiemCLI.java
src/: DLLitePlugin.cpp  DLRewriter.cpp  ExternalAtoms.cpp  ExternalAtoms_original.cpp  Makefile.am  RepairModelGenerator.cpp  RepairModelGenerator.cpp~  RepairModelGenerator.lo
vs10/: dlliteplugin.sln
vs10/dlliteplugin/: config.h  dlliteplugin.vcxproj  dlliteplugin.vcxproj.filters
vs10/setup/: setup.vdproj
(+1340 files in other folders)
