AUTOMAKE_OPTIONS = gnu 1.10

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = \
          owlcpp/ \
          src/ \
          include/ \
          examples/

DIST_SUBDIRS = \
          owlcpp/ \
          src/ \
          include/ \
          examples/

EXTRA_DIST = \
          build_owlcpp.sh \
          requiem
